--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -24,12 +24,17 @@ body {
   flex-direction: column;
 
   .form-search {
-    padding: 60px 60px 60px 120px;
+    margin: 5px -10px 5px;
+    padding: 60px 40px 60px 120px;
     border: none;
+    border-radius: 0px 20px 20px 0;
     font-size: 2.6em;
-    box-shadow: none;
+    box-shadow: 2px 2px 10px lightgrey;
+    background-color: lightgrey;
+    transition: 0.3s;
     &:focus {
-      box-shadow: none;
+      box-shadow: 3px 3px 10px rgb(89, 89, 163);
+      background-color: white;
     }
   }
 
@@ -48,7 +53,10 @@ body {
     display: flex;
     flex-grow: 1;
     height: calc(100vh - 232px);
-    background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.22'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background: rgb(39,61,55);
+    background: linear-gradient(0deg, rgba(39,61,55,1) 0%, rgba(216,225,245,1) 100%);
+    border-radius: 5%;
+    margin: 20px;
 
     .gif {
       max-width: 80%;
@@ -60,7 +68,7 @@ body {
 
 .right-scene {
   flex: 0 0 40%;
-  background-color: #ecf0f1;
+  background-color: #e7e7e7;
   overflow: scroll;
 
   .gif-list {
