--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <title>React boilerplate</title>
+    <title>GIF Searcher</title>
+    <link rel="icon" type="image/x-icon" href="assets/cb-favicon.ico">
   </head>
   <body>
     <!-- <h1 class="header-centered">You're ready for React 🎉</h1> -->
