--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title>GIF Searcher</title>
-    <link rel="icon" type="image/x-icon" href="assets/cb-favicon.ico">
+    <!-- <link rel="icon" type="image/x-icon" href="assets/cb-favicon.ico"> -->
   </head>
   <body>
     <!-- <h1 class="header-centered">You're ready for React 🎉</h1> -->
